--- a/Job_Portal/Pages/Shared/_Layout.cshtml
+++ b/Job_Portal/Pages/Shared/_Layout.cshtml
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - Job_Portal</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="~/css/modal.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/Job_Portal.styles.css" asp-append-version="true" />
 </head>
-<body>
+<body>  
   
     <div class="container">
       
