--- a/Job_Portal/wwwroot/css/com.css
+++ b/Job_Portal/wwwroot/css/com.css
@@ -80,6 +80,7 @@
     margin-right: 10px;
     color: white;
     font-weight: bold;
+    background-color: #14A800!important;
 }
 
 .current-user {
@@ -229,3 +230,64 @@
     font-size: 16px;
     font-weight: bold;
 }
+
+
+#comment-modal-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+}
+
+/* Modal */
+.comment-modal {
+    background-color: white;
+    width: 100%;
+    max-width: 600px;
+    border-radius: 8px;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+    max-height: 90vh;
+    overflow-y: auto;
+}
+
+/* Modal Header */
+.modal-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 16px 20px;
+}
+
+    .modal-header h2 {
+        font-size: 20px;
+        font-weight: 600;
+        color: #333;
+        margin: 0;
+    }
+
+.close-btn {
+    background: none;
+    border: none;
+    font-size: 20px;
+    cursor: pointer;
+    color: #555;
+    padding: 0;
+}
+
+/* Divider */
+.modal-divider {
+    height: 1px;
+    background-color: #e0e0e0;
+    width: 100%;
+}
+
+
+
+
+
